syntax = "proto3";

package auth.v1;

option go_package = "github.com/username/progetto/proto/gen/go/auth/v1;authv1";

service AuthService {
  // Register a new user
  rpc Register(RegisterRequest) returns (RegisterResponse);
  // Login with credentials
  rpc Login(LoginRequest) returns (LoginResponse);
  // Refresh access token using refresh token
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3; // Seconds until access token expires
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}
